# ros2-learning

./: .gitignore  tutorial.md
ROS2-basic/: ros2_cmd.md  ros2_cmd.sh
ROS2-basic/chapter2/chapter2_ws/: build.sh
ROS2-basic/chapter2/chapter2_ws/src/: create_pkg.sh
ROS2-basic/chapter2/chapter2_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
ROS2-basic/chapter2/chapter2_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_auto.cpp  learn_function.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
ROS2-basic/chapter3/: tutorial-chapter3.md
ROS2-basic/chapter3/topic_practice_ws/src/: create_display.sh  create_interfaces.sh  create_publisher.sh
ROS2-basic/chapter3/topic_practice_ws/src/status_display/: CMakeLists.txt
ROS2-basic/chapter3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
ROS2-basic/chapter3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
ROS2-basic/chapter3/topic_practice_ws/src/status_publisher/: package.xml
ROS2-basic/chapter3/topic_practice_ws/src/status_publisher/status_publisher/: sys_status_pub.py
ROS2-basic/chapter3/topic_ws/: build.sh
ROS2-basic/chapter3/topic_ws/src/: create_pkg.sh
ROS2-basic/chapter3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
ROS2-basic/chapter3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
ROS2-basic/chapter4/: tutorial.md
ROS2-basic/chapter4/chapter4_ws/: README.md  requirements.txt
ROS2-basic/chapter4/chapter4_ws/src/: create_cpp_service.sh  create_interfaces.sh  create_service.sh
ROS2-basic/chapter4/chapter4_ws/src/chapter4_interfaces/: CMakeLists.txt  package.xml
ROS2-basic/chapter4/chapter4_ws/src/chapter4_interfaces/srv/: Patrol.srv
ROS2-basic/chapter4/chapter4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
ROS2-basic/chapter4/chapter4_ws/src/demo_cpp_service/launch/: actions.launch.py  demo.launch.py  spawn.launch.py
ROS2-basic/chapter4/chapter4_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_client.cpp  turtle_control.cpp
ROS2-basic/chapter4/chapter4_ws/src/demo_python_service/: package.xml  setup.py
ROS2-basic/chapter4/chapter4_ws/src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
ROS2-basic/chapter5/: README.md  frames_2025-04-12_13.59.10.gv
ROS2-basic/chapter5/chapter5_ws/: build.sh
ROS2-basic/chapter5/chapter5_ws/src/: create_tf.sh  create_tf_cpp.sh
ROS2-basic/chapter5/chapter5_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
ROS2-basic/chapter5/chapter5_ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
ROS2-basic/chapter5/chapter5_ws/src/demo_python_tf/: package.xml  setup.py
ROS2-basic/chapter5/chapter5_ws/src/demo_python_tf/demo_python_tf/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf_listener.py
ROS2-basic/mytest/: ros_notes.md
ROS2-basic/mytest/test01_ws/: build.sh
ROS2-basic/mytest/test01_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
ROS2-basic/mytest/test01_ws/src/demo_cpp_pkg/src/: cpp_node_test.cpp  publisher_subscription_test.cpp
ROS2-basic/mytest/test01_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
ROS2-basic/mytest/test01_ws/src/demo_cpp_service/launch/: action.launch.py  demo.launch.py
ROS2-basic/mytest/test01_ws/src/demo_cpp_service/src/: turtle_client.cpp  turtle_service.cpp
ROS2-basic/mytest/test01_ws/src/demo_python_service/: package.xml  setup.py
ROS2-basic/mytest/test01_ws/src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py  face_detect_service_node.py
ROS2-basic/mytest/test01_ws/src/demo_python_service/launch/: demo.launch.py
ROS2-basic/mytest/test01_ws/src/srv_interfaces/: CMakeLists.txt  package.xml
ROS2-basic/mytest/test01_ws/src/srv_interfaces/srv/: Patrol.srv
ROS2-basic/mytest/test01_ws/src/status_display/: CMakeLists.txt  package.xml
ROS2-basic/mytest/test01_ws/src/status_display/src/: sys_status_display.cpp
ROS2-basic/mytest/test01_ws/src/status_interfaces/: CMakeLists.txt  package.xml
ROS2-basic/mytest/test01_ws/src/status_publisher/: setup.py
ROS2-basic/mytest/test01_ws/src/status_publisher/status_publisher/: sys_status_pub.py
